--- a/index.html
+++ b/index.html
@@ -276,6 +276,64 @@
     position: relative;
   }
 }
+    /* Mobile: Navigation als Dropdown-Menü */
+.mobileMenu { display: none; }
+
+@media (max-width: 768px) {
+  /* Header auf mobile: nicht sticky (wie besprochen) */
+  header { position: relative; }
+
+  /* Desktop-Links ausblenden */
+  .navlinks { display: none; }
+
+  /* Mobile-Menü anzeigen */
+  .mobileMenu { 
+    display: block; 
+    position: relative;
+  }
+
+  .mobileMenuBtn{
+    cursor: pointer;
+    list-style: none;
+    user-select: none;
+    padding: 10px 12px;
+    border-radius: 14px;
+    border: 1px solid var(--line);
+    background: rgba(255,255,255,0.06);
+    color: var(--text);
+    font-weight: 680;
+  }
+  .mobileMenuBtn::-webkit-details-marker{ display:none; }
+
+  .mobileMenuPanel{
+    position: absolute;
+    right: 0;
+    top: calc(100% + 10px);
+    min-width: 210px;
+    padding: 10px;
+    border-radius: 16px;
+    border: 1px solid var(--line);
+    background: rgba(7,11,20,0.92);
+    backdrop-filter: blur(10px);
+    box-shadow: var(--shadow);
+    display: grid;
+    gap: 6px;
+    z-index: 50;
+  }
+
+  .mobileMenuPanel a{
+    color: var(--text);
+    padding: 10px 10px;
+    border-radius: 12px;
+    text-decoration: none;
+    background: rgba(255,255,255,0.04);
+  }
+  .mobileMenuPanel a:hover{
+    background: rgba(255,255,255,0.08);
+    text-decoration: none;
+  }
+}
+
   </style>
 </head>
 
@@ -294,14 +352,28 @@
       </div>
 
       <nav class="navlinks" aria-label="Navigation">
-        <a href="#angebot">Angebot</a>
-        <a href="#arbeitsweise">Arbeitsweise</a>
-        <a href="#preise">Preise</a>
-        <a href="#sprachen">Sprachen</a>
-        <a href="#ueber">Über mich</a>
-        <a href="#faq">FAQ</a>
-        <a href="#kontakt">Kontakt</a>
-      </nav>
+  <a href="#angebot">Angebot</a>
+  <a href="#arbeitsweise">Arbeitsweise</a>
+  <a href="#preise">Preise</a>
+  <a href="#sprachen">Sprachen</a>
+  <a href="#ueber">Über mich</a>
+  <a href="#faq">FAQ</a>
+  <a href="#kontakt">Kontakt</a>
+</nav>
+
+<!-- Mobile-Menü -->
+<details class="mobileMenu">
+  <summary class="mobileMenuBtn">Menü</summary>
+  <div class="mobileMenuPanel">
+    <a href="#angebot">Angebot</a>
+    <a href="#arbeitsweise">Arbeitsweise</a>
+    <a href="#preise">Preise</a>
+    <a href="#sprachen">Sprachen</a>
+    <a href="#ueber">Über mich</a>
+    <a href="#faq">FAQ</a>
+    <a href="#kontakt">Kontakt</a>
+  </div>
+</details>
     </div>
   </div>
 </header>
