--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Psychologische Beratung Ebadi | Hamburg & Online</title>
-  <meta name="description" content="Psychologische Beratung bei belastenden Lebensabschnitten – online und mobil in/um Hamburg. In der Regel Erstgespräch innerhalb von 48 Stunden (je nach Auslastung). Deutsch, Persisch, Dari, Englisch." />
+  <meta name="description" content="Psychologische Beratung bei belastenden Lebensabschnitten – online und mobil. Erstgespräch innerhalb von 48 Stunden (je nach Auslastung). Deutsch, Persisch, Dari, Englisch." />
   <meta name="theme-color" content="#0b1220" />
 
   <!-- Open Graph (Link-Vorschau) -->
@@ -390,7 +390,7 @@
             <span>Professionell · strukturiert · vertraulich</span>
           </div>
 
-          <h1>Statt monatelanger Wartezeiten: in der Regel ein Gespräch innerhalb von 48&nbsp;Stunden.</h1>
+          <h1>Statt monatelanger Wartezeiten: Ein Gespräch innerhalb von 48&nbsp;Stunden.</h1>
           <p class="muted" style="max-width: 70ch;">
             Psychologische Beratung für Menschen in herausfordernden Lebensabschnitten – online oder mobil in und um Hamburg.
             Klarer Rahmen, klinisch fundierte Einordnung, alltagsnahe nächste Schritte.
